final version of landing

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>НАМУ — Художній музей</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./icons/favicon.svg"
+    />
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
@@ -28,7 +33,7 @@
       href="./styles/style.scss"
     />
     <script
-      src="./app.js"
+      src="./scripts/main.js"
       defer
     ></script>
   </head>
@@ -135,7 +140,7 @@
         <div class="header__container">
           <div class="header__background-container">
             <a
-              href="#"
+              href="index.html"
               class="header__logo-link"
             >
               <img
@@ -149,32 +154,33 @@
           <h1 class="header__title">Художній музей</h1>
           <div class="header__tickets-button-wrapper">
             <a
-              href="#"
+              href="#events"
               class="header__tickets-button"
             >
               <span class="header__tickets-button-text">Квитки</span>
             </a>
-            <a
-              class="header__events-link"
-              href="#events"
-            >
-              <div class="header__events-link--line"></div>
-              <p class="header__events-link--text">Події</p>
-            </a>
           </div>
         </div>
       </div>
+
+      <a
+        class="header__events-link"
+        href="#events"
+      >
+        <div class="header__events-link--line"></div>
+        <p class="header__events-link--text">Події</p>
+      </a>
     </header>
 
     <main class="main">
       <section
         id="events"
-        class="events"
+        class="scroll-object scroll-object--odd events"
       >
         <h2 class="section-title">Актуальні події</h2>
         <article class="exhibition">
           <a
-            href="#"
+            href="#events"
             class="exhibition__photo exhibition__photo--1"
           ></a>
           <div class="exhibition__content">
@@ -193,7 +199,7 @@
 
         <article class="exhibition">
           <a
-            href="#"
+            href="#events"
             class="exhibition__photo exhibition__photo--2"
           ></a>
           <div class="exhibition__content">
@@ -213,7 +219,7 @@
 
       <section
         id="lection"
-        class="lection main__lection"
+        class="scroll-object scroll-object--even lection main__lection"
       >
         <div class="lection__photo"></div>
         <article class="lection__block">
@@ -228,12 +234,13 @@
               романтизму
             </h3>
           </div>
+          <div class="lection__shadow-container"></div>
         </article>
       </section>
 
       <section
         id="gallery"
-        class="gallery"
+        class="scroll-object scroll-object--odd gallery"
       >
         <h2 class="section-title">Галерея</h2>
 
@@ -280,7 +287,7 @@
 
       <section
         id="subscribe"
-        class="subscribe"
+        class="scroll-object scroll-object--even subscribe"
       >
         <article class="subscribe__content">
           <h2 class="section-title section-title--subscription">Підписка</h2>
@@ -288,6 +295,7 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </p>
           <form
+            onsubmit="this.reset(); return false;"
             action="#"
             class="subscribe__form"
           >
@@ -295,6 +303,7 @@
               type="email"
               placeholder="E-mail"
               class="subscribe__form-email"
+              required
             />
             <button class="subscribe__button"></button>
           </form>
@@ -308,7 +317,7 @@
     >
       <div class="footer__logo-block">
         <a
-          href="#"
+          href="index.html"
           class="footer__logo-site"
         >
           <img
@@ -319,8 +328,9 @@
         </a>
         <div class="footer__logo-block-socials">
           <a
-            href="#"
+            href="https://www.facebook.com/namu.museum"
             class="footer__logo-fb"
+            target="_blank"
           >
             <img
               src="./images/fb-logo-2x.png"
@@ -329,8 +339,9 @@
             />
           </a>
           <a
-            href="#"
+            href="https://www.instagram.com/namu.museum/"
             class="footer__logo-insta"
+            target="_blank"
           >
             <img
               src="./images/insta-logo-2x.png"
@@ -382,7 +393,7 @@
         <ul class="footer__contacts-content">
           <li class="footer__contacts-contact">
             <a
-              href="#"
+              href="https://www.google.com/maps/place//@50.4494273,30.5257796,830m/"
               class="footer__contacts-link"
             >
               вул. М. Грушевського, 6; Київ, 01001
@@ -390,7 +401,7 @@
           </li>
           <li class="footer__contacts-contact">
             <a
-              href="#"
+              href="tel://+380442781357"
               class="footer__contacts-link"
             >
               тел. +38 (044) 278-13-57
@@ -398,7 +409,7 @@
           </li>
           <li class="footer__contacts-contact">
             <a
-              href="#"
+              href="tel://+380442787454"
               class="footer__contacts-link"
             >
               факс +38 (044) 278-74-54
@@ -406,7 +417,7 @@
           </li>
           <li class="footer__contacts-contact">
             <a
-              href="#"
+              href="mailto:info@namu.kiev.ua"
               class="footer__contacts-link"
             >
               e-mail: info@namu.kiev.ua
@@ -446,7 +457,7 @@
       <ul class="footer__nav-2">
         <li class="footer__nav-item-2">
           <a
-            href="#footer"
+            href="#subscribe"
             class="footer__nav-link-2"
           >
             Про Нас
@@ -454,7 +465,7 @@
         </li>
         <li class="footer__nav-item-2">
           <a
-            href="#footer"
+            href="#contacts"
             class="footer__nav-link-2"
           >
             Контакти
