fixed section image overlaying backdrop issue

--- a/src/index.html
+++ b/src/index.html
@@ -38,101 +38,102 @@
     ></script>
   </head>
   <body class="page__body">
-    <header class="header page__header">
-      <div class="header__wrapper">
-        <div
-          id="backdrop"
-          class="backdrop"
-        ></div>
-        <div
-          id="dropdown"
-          class="dropdown dropdown--non-visible"
-        >
-          <a
-            href="#"
-            class="icon icon--dropdown-close"
-          ></a>
-          <ul class="dropdown__nav">
-            <li class="dropdown__nav-link-group">
-              <ul class="dropdown__nav-group">
-                <li class="dropdown__nav-item">
-                  <a
-                    href="#gallery"
-                    class="dropdown__nav-link"
-                  >
-                    Галерея
-                  </a>
-                </li>
-                <li class="dropdown__nav-item">
-                  <a
-                    href="#events"
-                    class="dropdown__nav-link"
-                  >
-                    Виставки та
-                    <br />
-                    події
-                  </a>
-                </li>
-              </ul>
+    <div
+      id="backdrop"
+      class="backdrop"
+    ></div>
+    <aside
+      id="dropdown"
+      class="dropdown dropdown--non-visible"
+    >
+      <a
+        href="#"
+        class="icon icon--dropdown-close"
+      ></a>
+      <ul class="dropdown__nav">
+        <li class="dropdown__nav-link-group">
+          <ul class="dropdown__nav-group">
+            <li class="dropdown__nav-item">
+              <a
+                href="#gallery"
+                class="dropdown__nav-link"
+              >
+                Галерея
+              </a>
             </li>
-            <li class="dropdown__nav-link-group">
-              <ul class="dropdown__nav-group">
-                <li class="dropdown__nav-item">
-                  <a
-                    href="#footer"
-                    class="dropdown__nav-link"
-                  >
-                    Про Нас
-                  </a>
-                </li>
-                <li class="dropdown__nav-item">
-                  <a
-                    href="#contacts"
-                    class="dropdown__nav-link"
-                  >
-                    Контакти
-                  </a>
-                </li>
-              </ul>
+            <li class="dropdown__nav-item">
+              <a
+                href="#events"
+                class="dropdown__nav-link"
+              >
+                Виставки та
+                <br />
+                події
+              </a>
             </li>
           </ul>
-          <hr class="dropdown__divider" />
-          <section class="dropdown__schedule">
-            <p class="dropdown__schedule-title">Графік роботи</p>
-            <div class="dropdown__schedule-wrapper">
-              <ul class="dropdown__schedule-list">
-                <li class="dropdown__schedule-item">
-                  <strong>12:00 — 20:00</strong>
-                  середа
-                </li>
-                <li class="dropdown__schedule-item">
-                  <strong>12:00 — 20:00</strong>
-                  четвер
-                </li>
-                <li class="dropdown__schedule-item">
-                  <strong>12:00 — 20:00</strong>
-                  п’ятниця
-                </li>
-                <li class="dropdown__schedule-item">
-                  <strong>11:00 — 19:00</strong>
-                  субота
-                </li>
-                <li class="dropdown__schedule-item">
-                  <strong>11:00 — 19:00</strong>
-                  неділя
-                </li>
-              </ul>
-              <div class="dropdown__schedule-details">
-                <p class="dropdown__schedule-weekends">
-                  <strong>Вихідні:</strong>
-                  понеділок, вівторок
-                  <br />
-                  Каса припиняє роботу за 1 годину до закриття музею
-                </p>
-              </div>
-            </div>
-          </section>
+        </li>
+        <li class="dropdown__nav-link-group">
+          <ul class="dropdown__nav-group">
+            <li class="dropdown__nav-item">
+              <a
+                href="#footer"
+                class="dropdown__nav-link"
+              >
+                Про Нас
+              </a>
+            </li>
+            <li class="dropdown__nav-item">
+              <a
+                href="#contacts"
+                class="dropdown__nav-link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <hr class="dropdown__divider" />
+      <section class="dropdown__schedule">
+        <p class="dropdown__schedule-title">Графік роботи</p>
+        <div class="dropdown__schedule-wrapper">
+          <ul class="dropdown__schedule-list">
+            <li class="dropdown__schedule-item">
+              <strong>12:00 — 20:00</strong>
+              середа
+            </li>
+            <li class="dropdown__schedule-item">
+              <strong>12:00 — 20:00</strong>
+              четвер
+            </li>
+            <li class="dropdown__schedule-item">
+              <strong>12:00 — 20:00</strong>
+              п’ятниця
+            </li>
+            <li class="dropdown__schedule-item">
+              <strong>11:00 — 19:00</strong>
+              субота
+            </li>
+            <li class="dropdown__schedule-item">
+              <strong>11:00 — 19:00</strong>
+              неділя
+            </li>
+          </ul>
+          <div class="dropdown__schedule-details">
+            <p class="dropdown__schedule-weekends">
+              <strong>Вихідні:</strong>
+              понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
         </div>
+      </section>
+    </aside>
+
+    <header class="header page__header">
+      <div class="header__wrapper">
         <a
           href="#dropdown"
           class="icon icon--dropdown-open"
