--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,291 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+    rel="icon"
+    href="./styles/icons/namu-logo.svg"
+  />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header" id="header">
+      <!-- СИН #1: top-bar -->
+      <div class="top-bar">
+        <a href="#menu" class="top-bar__menu icon"></a>
+        <a class="top-bar__logo-link" href="#">
+          <img src="styles/icons/namu-logo.svg"
+            alt="NAMU logo"
+            class="top-bar__logo" />
+        </a>
+      </div>
+
+      <!-- СИН #2: фонове зображення -->
+      <div class="header__background"></div>
+
+      <!-- СИН #3: контент (заголовок, квитки) -->
+      <div class="header__content">
+        <div class="header__bottom">
+          <h1 class="header__title">Художній музей</h1>
+          <div class="input__tickets">
+            <p class="button__text">Квитки</p>
+            <label>
+              <a href="#subscription">
+                <button type="button" class="button__tickets">
+                  <img
+                    src="styles/image/pointer_white.png"
+                    alt="pointer"
+                    class="pointer"
+                  />
+                </button>
+              </a>
+            </label>
+          </div>
+        </div>
+        <div class="event-section">
+          <div class="event-section__vertical-label">Події</div>
+          <div class="event-section__divider"></div>
+        </div>
+      </div>
+    </header>
+
+
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="top-bar menu__top">
+          <a
+            href="#"
+            class="icon--close"
+          ></a>
+          <ul class="nav__list nav--column">
+            <a href="#gallery" class="nav__link">
+              <li class="nav__item">Галерея<br><br><br>   </li>
+            </a>
+            <a href="#current-events" class="nav__link">
+              <li class="nav__item">Виставки та події</li>
+
+            </a>
+            <a href="#subscription" class="nav__link">
+              <li class="nav__item">Про Нас<br><br><br></li>
+            </a>
+            <a href="#contacts" class="nav__link">
+              <li class="nav__item">Контакти</li>
+            </a>
+          </ul>
+          <hr class="white-hr" />
+          <div class="schedule__menu">
+            <p class="schedule__time">
+              Графік роботи<br><br>
+              <strong>12:00 — 20:00</strong> середа <br>
+              <strong>12:00 — 20:00</strong> четвер <br>
+              <strong>12:00 — 20:00</strong> п’ятниця <br>
+              <strong>11:00 — 19:00</strong> субота <br>
+              <strong>11:00 — 19:00</strong> неділя
+            </p>
+            <p class="schedule__announcement">
+              <br><br>
+              <strong>Вихідні:</strong> понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину <br>
+              до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+
+      <div class="container">
+        <div class="main__content">
+          <section
+            class="current-events"
+            id="current-events"
+            >
+            <h2 class="section-title">Актуальні події</h2>
+            <section class="current-events__exhibition exhibition">
+              <img src="./styles/image/exhibition-landscape.png" alt="photo__exhibition"
+              class="exhibition__photo">
+              <div class="exhibition__container">
+                <div class="exhibition__info">
+                  <p class="exhibition__line">Виставка</p>
+                  <p class="exhibition__date">26.08-29.11.2019</p>
+                </div>
+                <div class="exhibition__header">
+                  <h6 class="exhibition__title">Йду і повертаюсь</h6>
+                  <div class="exhibition__square"></div>
+                </div>
+                <p class="exhibition__about">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини     1980-1995 років.</p>
+              </div>
+            </section>
+
+            <section class="current-events__exhibition exhibition">
+              <img src="./styles/image/exhibition__girl.png" alt="photo__exhibition"
+              class="exhibition__photo">
+              <div class="exhibition__container">
+                <div class="exhibition__info">
+                  <p class="exhibition__line">Виставка</p>
+                  <p class="exhibition__date">26.08-29.11.2019</p>
+                </div>
+                <div class="exhibition__header">
+                  <h6 class="exhibition__title">І спогади і мрії</h6>
+                  <div class="exhibition__square exhibition__square--left"></div>
+                </div>
+                <p class="exhibition__about">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+              </div>
+            </section>
+
+            <section class="current-events__lecture lecture">
+              <div class="lecture__content">
+                <div class="lecture__info">
+                  <p class="lecture__line">ЛЕКЦІЯ</p>
+                  <p class="lecture__date">26/08/2019 - 11:00</p>
+                </div>
+                <div class="lecture__header">
+                  <h6 class="lecture__title">Від класицизму до романтизму</h6>
+                </div>
+              </div>
+            </section>
+          </section>
+          <section class="gallery"
+          id="gallery">
+            <h2 class="section-title">Галерея</h2>
+            <div class="gallery__swiper">
+              <div class="gallery__track">
+                <div class="gallery__slide slide--girl">
+                  <img src="./styles/image/gallery1.png" alt="Gallery Image 1">
+                </div>
+                <div class="gallery__slide slide--geese">
+                  <img src="./styles/image/gallery2.png" alt="Gallery Image 2">
+                </div>
+                <div class="gallery__slide slide--huts">
+                  <img src="./styles/image/gallery3.png" alt="Gallery Image 3">
+                </div>
+                <div class="gallery__slide slide--park">
+                  <img src="./styles/image/gallery5.png" alt="Gallery Image 4">
+                </div>
+                <div class="gallery__slide slide--sea">
+                  <img src="./styles/image/gallery4.png" alt="Gallery Image 5">
+                </div>
+              </div>
+            </div>
+            <div class="gallery__indicators">
+              <span class="gallery__indicator gallery__indicator--active"></span>
+              <span class="gallery__indicator"></span>
+              <span class="gallery__indicator"></span>
+              <span class="gallery__indicator"></span>
+            </div>
+          </section>
+          <section class="subscription"
+          id="subscription">
+            <div class="subscription__background">
+              <div class="subscription__content">
+                <h2 class="subscription__title">Підписка</h2>
+                <p class="subscription__description">
+                  Бути в курсі всіх актуальних подій та останніх новин.
+                </p>
+                <form class="subscription__form" id="subscription__form">
+                  <input
+                    type="email"
+                    class="subscription__input"
+                    placeholder="E-mail"
+                    required
+                  />
+                  <a href="#header" class="subscription__button">
+                    <button type="submit" class="subscription__button"
+                      id="subscription__button" >
+                      <img src="./styles/image/pointer_black.svg" alt="subscription__pointer"
+                        class="subscription__pointer">
+                    </button>
+                  </a>
+                </form>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="footer__top">
+        <div class="footer__logo">
+          <img src="./styles/icons/namu-logo.svg" alt="logo" />
+        </div>
+        <div class="footer__socials">
+          <a href="https://www.facebook.com/namu.museum/?locale=uk_UA" target="_blank">
+            <img src="./styles/icons/facebook-logo.svg" alt="facebook-logo" />
+          </a>
+          <a href="https://www.instagram.com/namu.museum/" target="_blank">
+            <img src="./styles/icons/instagram-logo.svg" alt="instagram-logo" />
+          </a>
+        </div>
+      </div>
+      <div class="footer__content">
+        <div class="footer__info">
+          <div class="footer__schedule">
+            <p class="footer__title">Графік роботи</p>
+            <p class="footer__text">
+              <strong>12:00 — 20:00</strong> середа <br>
+              <strong>12:00 — 20:00</strong> четвер <br>
+              <strong>12:00 — 20:00</strong> п’ятниця <br>
+              <strong>11:00 — 19:00</strong> субота <br>
+              <strong>11:00 — 19:00</strong> неділя
+            </p>
+            <p class="footer__announcement">
+            Вихідні понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину <br>
+              до закриття музею
+            </p>
+          </div>
+          <div class="footer__contacts">
+            <h3 class="footer__title">Контакти:</h3>
+            <p class="footer__text">вул. Михайла <br />Грушевського, 6;<br /> Київ, 01001<br />
+            тел. +38 (044)<br />278-13-57<br />
+            факс +38 (044)<br />278-74-54<br />
+            e-mail:<br />info@namu.kiev.ua
+            </p>
+          </div>
+          <a href="#top" class="footer__back-to-top">↑</a>
+        </div>
+      </div>
+      <div class="footer__container">
+        <div class="footer__bottom">
+          <ul class="footer__nav-list">
+            <a href="#gallery" class="footer__nav-link">
+              <li class="footer__nav-item">Галерея</li>
+            </a>
+            <a href="#current-events" class="footer__nav-link">
+              <li class="footer__nav-item">Виставки та події</li>
+            </a>
+          </ul>
+          <ul class="footer__nav-list">
+            <a href="#subscription" class="footer__nav-link">
+              <li class="footer__nav-item">Про Нас</li>
+            </a>
+            <a href="#contacts" class="footer__nav-link">
+              <li class="footer__nav-item">Контакти <br> <br></li>
+            </a>
+          </ul>
+        </div>
+        <div class="footer__credits">
+          <p class="footer__credits credits--design">Designed by Zhyriada Marina<br /></p>
+          <p class="footer__credits credits--design">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
