added hover effects

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,11 @@
             ></a>
           </div>
         </div>
-        <h1 class="header__title">Художній <br> музей</h1>
+        <h1 class="header__title">
+          Художній
+          <br />
+          музей
+        </h1>
         <div class="header__bottom">
           <a
             href="#events"
@@ -63,14 +67,14 @@
           >
             <p class="header__events-text">Події</p>
           </a>
-          <a class="header__button">
+          <a
+            class="header__button"
+            href="#events"
+          >
             <div class="header__button-text">
               <p class="header__text">Квитки</p>
             </div>
-            <div
-              href="#"
-              class="header__button-dec"
-            ></div>
+            <div class="header__button-dec"></div>
           </a>
         </div>
       </div>
@@ -82,7 +86,10 @@
             src="./images/Header/Header-bg.webp"
             alt="Museum"
           />
-          <a class="header__logo logo" href="#"></a>
+          <a
+            class="header__logo logo"
+            href="#"
+          ></a>
         </div>
       </div>
     </header>
@@ -486,7 +493,10 @@
             </p>
           </section>
 
-          <section class="footer__contact">
+          <section
+            class="footer__contact"
+            id="contact"
+          >
             <p class="footer__contact-title">Контакти:</p>
             <ul class="footer__contact-list">
               <li class="footer__contact-item">
