changed logic in slider

--- a/src/index.html
+++ b/src/index.html
@@ -283,27 +283,6 @@
             <div class="slider">
               <div class="slides-container">
                 <div class="imgs-slides">
-                  <input
-                    type="radio"
-                    name="radio-btn"
-                    id="radio1"
-                    checked
-                  />
-                  <input
-                    type="radio"
-                    name="radio-btn"
-                    id="radio2"
-                  />
-                  <input
-                    type="radio"
-                    name="radio-btn"
-                    id="radio3"
-                  />
-                  <input
-                    type="radio"
-                    name="radio-btn"
-                    id="radio4"
-                  />
 
                   <div class="first slide">
                     <img
@@ -340,22 +319,22 @@
           <div class="gallery__navigation">
             <div class="navigation-container">
               <div class="navigation">
-                <label
-                  for="radio1"
+                <button
+                  class="navigation-btn active"
+                  data-slide="0"
+                ></button>
+                <button
                   class="navigation-btn"
-                ></label>
-                <label
-                  for="radio2"
+                  data-slide="1"
+                ></button>
+                <button
                   class="navigation-btn"
-                ></label>
-                <label
-                  for="radio3"
+                  data-slide="2"
+                ></button>
+                <button
                   class="navigation-btn"
-                ></label>
-                <label
-                  for="radio4"
-                  class="navigation-btn"
-                ></label>
+                  data-slide="3"
+                ></button>
               </div>
             </div>
           </div>
