--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,11 @@
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </head>
   <!-- #endregion -->
 
@@ -168,7 +173,7 @@
           class="events"
           id="events"
         >
-          <h2 class="events__title">Актуальні події</h2>
+          <h2 class="events__title h2-title">Актуальні події</h2>
           <div class="events__content">
             <article class="events__event event">
               <img
@@ -203,8 +208,8 @@
                 </div>
                 <h3 class="event__title">І спогади і мрії</h3>
                 <p class="event__description">
-                  Національний художній музей України до 100 річчя від дня
-                  народження видатної української художниці Тетяни Яблонської
+                  Національний художній музей України до 100 річчя від дня left;
+                  ження видатної української художниці Тетяни Яблонської
                   відкриває ретроспективну ювілейну виставку «І спогади і мрії».
                 </p>
               </div>
@@ -231,7 +236,63 @@
           class="gallery"
           id="gallery"
         >
-          <h2>Галерея</h2>
+          <div class="container">
+            <h2 class="gallery__title h2-title">Галерея</h2>
+            <div class="gallery__content">
+              <div class="gallery__swiper swiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img
+                      src="./images/slider/slide_1.jpg"
+                      alt="slide"
+                    />
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="./images/slider/slide_2.jpg"
+                      alt="slide"
+                    />
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="./images/slider/slide_1.jpg"
+                      alt="slide"
+                    />
+                  </div>
+                  <div class="swiper-slide">
+                    <img
+                      src="./images/slider/slide_2.jpg"
+                      alt="slide"
+                    />
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+
+              <div class="gallery__images">
+                <img
+                  src="./images/gallery/picture_1.png"
+                  alt="image"
+                  class="gallery__img gallery__img--1"
+                />
+                <img
+                  src="./images/gallery/picture_2.png"
+                  alt="image"
+                  class="gallery__img gallery__img--2"
+                />
+                <img
+                  src="./images/gallery/picture_3.png"
+                  alt="image"
+                  class="gallery__img gallery__img--3"
+                />
+                <img
+                  src="./images/gallery/picture_4.png"
+                  alt="image"
+                  class="gallery__img gallery__img--4"
+                />
+              </div>
+            </div>
+          </div>
         </section>
         <!-- #endregion -->
         <!-- #region subscribe -->
