--- a/src/index.html
+++ b/src/index.html
@@ -201,7 +201,8 @@
                 <p class="subscription__description">
                   Бути в курсі всіх актуальних подій та останніх новин.
                 </p>
-                <form class="subscription__form" id="subscription__form">
+                <form class="subscription__form" id="subscription__form"
+                onsubmit="this.reset(); return false;">
                   <input
                     type="email"
                     class="subscription__input"
@@ -256,12 +257,25 @@
           </div>
           <div class="footer__contacts">
             <h3 class="footer__title">Контакти:</h3>
-            <p class="footer__text">вул. Михайла <br />Грушевського, 6;<br /> Київ, 01001<br />
-            тел. +38 (044)<br />278-13-57<br />
-            факс +38 (044)<br />278-74-54<br />
-            e-mail:<br />info@namu.kiev.ua
+            <p class="footer__text">
+              <a
+                href="https://www.google.com/maps?q=вул. Михайла Грушевського, 6, Київ, 01001"
+                target="_blank"
+                rel="noopener"
+                class="footer__link"
+              >
+                вул. Михайла Грушевського, 6;<br />
+              Київ, 01001
+                <br /><br />
+              </a>
+              <a href="tel:+380442781357" class="footer__link">тел. +38 (044) 278-13-57</a>
+              <br />
+              <a href="tel:+380442787454" class="footer__link">факс +38 (044) 278-74-54</a>
+              <br /><br />
+              <a href="mailto:info@namu.kiev.ua" class="footer__link">e-mail: info@namu.kiev.ua</a>
             </p>
           </div>
+
           <a href="#top" class="footer__back-to-top">↑</a>
         </div>
       </div>
