--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
               <div class="button__text">Квитки</div>
               <a
                 href="#"
-                class="button__link icon icon--link"
+                class="button__link icon icon--white-arrow"
               ></a>
             </div>
           </div>
@@ -297,11 +297,28 @@
         <!-- #endregion -->
         <!-- #region subscribe -->
         <section class="subscribe">
-          <h2>Підписка</h2>
-          <h2>Підписка</h2>
-          <h2>Підписка</h2>
-          <h2>Підписка</h2>
-          <h2>Підписка</h2>
+          <div class="container">
+            <h2 class="subscribe__title h2-title">Підписка</h2>
+            <div class="subscribe__description">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </div>
+            <form
+              action="#"
+              class="subscribe__form form"
+              onsubmit="this.reset(); return false"
+            >
+              <input
+                type="email"
+                class="form__input"
+                placeholder="E-mail"
+                required
+              />
+              <button
+                type="submit"
+                class="form__button icon icon--black-arrow"
+              ></button>
+            </form>
+          </div>
         </section>
       </div>
     </main>
@@ -311,7 +328,7 @@
       class="footer"
       id="contacts"
     >
-      <div class="container">Contacts</div>
+      <div class="container">footer</div>
     </footer>
     <!-- #endregion -->
     <script src="scripts/main.js"></script>
