--- a/src/index.html
+++ b/src/index.html
@@ -168,11 +168,11 @@
     <!-- #endregion -->
     <!-- #region events -->
     <main class="main">
-      <div class="container">
-        <section
-          class="events"
-          id="events"
-        >
+      <section
+        class="events"
+        id="events"
+      >
+        <div class="events__container container">
           <h2 class="events__title h2-title">Актуальні події</h2>
           <div class="events__content">
             <article class="events__event event">
@@ -229,107 +229,105 @@
               </div>
             </article>
           </div>
-        </section>
-        <!-- #endregion -->
-        <!-- #region gallery -->
-        <section
-          class="gallery"
-          id="gallery"
-        >
-          <div class="container">
-            <h2 class="gallery__title h2-title">Галерея</h2>
-            <div class="gallery__content">
-              <div class="gallery__swiper swiper">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <img
-                      src="./images/slider/slide_1.jpg"
-                      alt="slide"
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="./images/slider/slide_2.jpg"
-                      alt="slide"
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="./images/slider/slide_1.jpg"
-                      alt="slide"
-                    />
-                  </div>
-                  <div class="swiper-slide">
-                    <img
-                      src="./images/slider/slide_2.jpg"
-                      alt="slide"
-                    />
-                  </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+      <!-- #region gallery -->
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <div class="gallery__container container">
+          <h2 class="gallery__title h2-title">Галерея</h2>
+          <div class="gallery__content">
+            <div class="gallery__swiper swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img
+                    src="./images/slider/slide_1.jpg"
+                    alt="slide"
+                  />
                 </div>
-                <div class="swiper-pagination"></div>
+                <div class="swiper-slide">
+                  <img
+                    src="./images/slider/slide_2.jpg"
+                    alt="slide"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="./images/slider/slide_1.jpg"
+                    alt="slide"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="./images/slider/slide_2.jpg"
+                    alt="slide"
+                  />
+                </div>
               </div>
+              <div class="swiper-pagination"></div>
+            </div>
 
-              <div class="gallery__images">
-                <img
-                  src="./images/gallery/picture_1.png"
-                  alt="image"
-                  class="gallery__img gallery__img--1"
-                />
-                <img
-                  src="./images/gallery/picture_2.png"
-                  alt="image"
-                  class="gallery__img gallery__img--2"
-                />
-                <img
-                  src="./images/gallery/picture_3.png"
-                  alt="image"
-                  class="gallery__img gallery__img--3"
-                />
-                <img
-                  src="./images/gallery/picture_4.png"
-                  alt="image"
-                  class="gallery__img gallery__img--4"
-                />
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- #endregion -->
-        <!-- #region subscribe -->
-        <section class="subscribe">
-          <div class="container">
-            <h2 class="subscribe__title h2-title">Підписка</h2>
-            <div class="subscribe__description">
-              Бути в курсі всіх актуальних подій та останніх новин.
-            </div>
-            <form
-              action="#"
-              class="subscribe__form form"
-              onsubmit="this.reset(); return false"
-            >
-              <input
-                type="email"
-                class="form__input"
-                placeholder="E-mail"
-                required
+            <div class="gallery__images">
+              <img
+                src="./images/gallery/picture_1.png"
+                alt="image"
+                class="gallery__img gallery__img--1"
               />
-              <button
-                type="submit"
-                class="form__button icon icon--black-arrow"
-              ></button>
-            </form>
+              <img
+                src="./images/gallery/picture_2.png"
+                alt="image"
+                class="gallery__img gallery__img--2"
+              />
+              <img
+                src="./images/gallery/picture_3.png"
+                alt="image"
+                class="gallery__img gallery__img--3"
+              />
+              <img
+                src="./images/gallery/picture_4.png"
+                alt="image"
+                class="gallery__img gallery__img--4"
+              />
+            </div>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
+      <!-- #endregion -->
+      <!-- #region subscribe -->
+      <section class="subscribe">
+        <div class="subscribe__container container">
+          <h2 class="subscribe__title h2-title">Підписка</h2>
+          <div class="subscribe__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+          <form
+            action="#"
+            class="subscribe__form form"
+            onsubmit="this.reset(); return false"
+          >
+            <input
+              type="email"
+              class="form__input"
+              placeholder="E-mail"
+              required
+            />
+            <button
+              type="submit"
+              class="form__button icon icon--black-arrow"
+            ></button>
+          </form>
+        </div>
+      </section>
     </main>
     <!-- #endregion -->
     <!-- #region footer -->
     <footer
       class="footer"
       id="contacts"
-    >
-      <div class="container">footer</div>
-    </footer>
+    ></footer>
     <!-- #endregion -->
     <script src="scripts/main.js"></script>
   </body>
