--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
   </head>
   <!-- #endregion -->
 
+  <!-- #region header -->
   <body class="page__body">
-    <!-- #region header -->
     <header class="header">
       <div class="container">
         <div class="header__container">
@@ -52,7 +52,7 @@
           <div class="header__top">
             <a
               href="#"
-              class="header__logo"
+              class="header__logo logo"
             >
               NA
               <br />
@@ -129,33 +129,43 @@
               </ul>
             </div>
           </div>
-          <div class="menu__shedule-wrapper">
-            <div class="menu__schedule">
-              <p class="menu__schedule--title">Графік роботи</p>
+          <div class="menu__schedule schedule">
+            <div class="schedule__container schedule__container--min-width">
+              <p class="schedule__title">Графік роботи</p>
               <p>
-                <span class="menu__schedule--bold">12:00 — 20:00</span>
+                <span class="schedule__text schedule__text--bold">
+                  12:00 — 20:00
+                </span>
 
                 середа
               </p>
               <p>
-                <span class="menu__schedule--bold">12:00 — 20:00</span>
+                <span class="schedule__text schedule__text--bold">
+                  12:00 — 20:00
+                </span>
                 четвер
               </p>
               <p>
-                <span class="menu__schedule--bold">12:00 — 20:00</span>
+                <span class="schedule__text schedule__text--bold">
+                  12:00 — 20:00
+                </span>
                 п’ятниця
               </p>
               <p>
-                <span class="menu__schedule--bold">11:00 — 19:00</span>
+                <span class="schedule__text schedule__text--bold">
+                  11:00 — 19:00
+                </span>
                 субота
               </p>
               <p>
-                <span class="menu__schedule--bold">11:00 — 19:00</span>
+                <span class="schedule__text schedule__text--bold">
+                  11:00 — 19:00
+                </span>
                 неділя
               </p>
             </div>
-            <div class="menu__schedule menu__schedule--summary">
-              <span class="menu__schedule--bold">Вихідні:</span>
+            <div class="schedule__text schedule__text--summary">
+              <span class="schedule__text schedule__text--bold">Вихідні:</span>
               понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
               музею
             </div>
@@ -327,7 +337,163 @@
     <footer
       class="footer"
       id="contacts"
-    ></footer>
+    >
+      <div class="footer__container container">
+        <div class="footer__content">
+          <div class="footer__top">
+            <a
+              href="#"
+              class="footer__logo logo"
+            >
+              NA
+              <br />
+              MU
+            </a>
+            <div class="footer__socials">
+              <a
+                href="https://uk-ua.facebook.com/"
+                class="icon icon--facebook"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.instagram.com/"
+                class="icon icon--instagram"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+
+          <div class="footer__schedule schedule">
+            <div class="schedule__container">
+              <p class="schedule__title">Графік роботи</p>
+              <p>
+                <span class="schedule__text schedule__text--bold">
+                  12:00 — 20:00
+                </span>
+
+                середа
+              </p>
+              <p>
+                <span class="schedule__text schedule__text--bold">
+                  12:00 — 20:00
+                </span>
+                четвер
+              </p>
+              <p>
+                <span class="schedule__text schedule__text--bold">
+                  12:00 — 20:00
+                </span>
+                п’ятниця
+              </p>
+              <p>
+                <span class="schedule__text schedule__text--bold">
+                  11:00 — 19:00
+                </span>
+                субота
+              </p>
+              <p>
+                <span class="schedule__text schedule__text--bold">
+                  11:00 — 19:00
+                </span>
+                неділя
+              </p>
+            </div>
+            <div class="schedule__text schedule__text--summary">
+              Вихідні понеділок, вівторок
+              <br />
+              Каса припиняє роботу за 1 годину до закриття музею
+            </div>
+          </div>
+          <div class="footer__contacts contacts">
+            <p class="contacts__title">Контакти:</p>
+            <a
+              href="https://maps.app.goo.gl/kJvRChjivUxhXr6d7"
+              class="contacts__link"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6;
+              <br />
+              Київ, 01001
+            </a>
+            <br />
+            <a
+              href="tel:+38 (044) 278-13-57"
+              class="contacts__link"
+            >
+              тел. +38 044 278-13-57
+            </a>
+            <br />
+            <a
+              href="tel:+38 (044) 278-13-57"
+              class="contacts__link"
+            >
+              факс +38 044 278-74-54
+            </a>
+            <br />
+            <a
+              href="mailto:info@namu.kiev.ua"
+              class="contacts__link"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+
+          <nav class="footer__nav nav">
+            <ul class="nav__list nav__list--compact">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="nav__link nav__link--compact"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#subscribe"
+                  class="nav__link nav__link--compact"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#events"
+                  class="nav__link nav__link--compact"
+                >
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  href="#contacts"
+                  class="nav__link nav__link--compact"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <div class="footer__bottom">
+            <p class="footer__designed">Designed by Zhyriada Marina</p>
+            <p class="footer__copyright">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+
+          <a
+            href="#"
+            class="footer__to-top icon"
+          >
+            <img
+              src="./images/icons/arrow-up.png"
+              alt="arrow-top"
+            />
+          </a>
+        </div>
+      </div>
+    </footer>
     <!-- #endregion -->
     <script src="scripts/main.js"></script>
   </body>
