--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </head>
   <!-- #endregion -->
-
   <!-- #region header -->
   <body class="page__body">
     <header class="header">
@@ -224,22 +223,24 @@
                 </p>
               </div>
             </article>
-
-            <article class="events__event event event--lecture">
-              <div class="event__content event__content--lecture">
-                <div class="event__info event__info--lecture">
-                  <span class="event__type event__type--lecture">ЛЕКЦІЯ</span>
-                  <span class="event__date event__date--lecture">
-                    26/08/2019 - 11:00
-                  </span>
-                </div>
-                <h3 class="event__title event__title--lecture">
-                  Від класицизму до романтизму
-                </h3>
-              </div>
-            </article>
           </div>
         </div>
+
+        <article
+          class="events__event events__event--lecture event event--lecture"
+        >
+          <div class="event__content event__content--lecture">
+            <div class="event__info event__info--lecture">
+              <span class="event__type event__type--lecture">ЛЕКЦІЯ</span>
+              <span class="event__date event__date--lecture">
+                26/08/2019 - 11:00
+              </span>
+            </div>
+            <h3 class="event__title event__title--lecture">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </article>
       </section>
       <!-- #endregion -->
       <!-- #region gallery -->
