margin fix + added favicon

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
     />
     <title>NAMU</title>
     <link
+      rel="icon"
+      href="./images/icons/icon-logo.svg"
+    />
+    <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
     />
