--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Namu</title>
+    <title>NAMU</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
@@ -33,15 +33,23 @@
       rel="preconnect"
       href="https://fonts.googleapis.com"
     />
+
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
       crossorigin="anonymous"
     />
+
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="icon"
+      href="images/icons/namu_favicon.png"
+    />
+
     <script
       src="scripts/main.js"
       defer
@@ -50,7 +58,10 @@
 
   <body class="page__body">
     <!-- #region header -->
-    <header class="header">
+    <header
+      class="header"
+      id="header"
+    >
       <div class="header__container">
         <div
           class="top-bar"
@@ -502,23 +513,40 @@
           >
             <p class="address__name">Контакти:</p>
             <p class="address__value">
-              вул. М. Грушевського, 6; Київ, 01001
+              <a
+                href="https://maps.app.goo.gl/S2rGPbPu9jrHjdDN6"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="address__contact"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
               <br />
-              тел. +38 (044) 278-13-57
+              <a
+                class="address__contact"
+                href="tel:+38 (044) 278-13-57"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
               <br />
               факс +38 (044) 278-74-54
               <br />
-              e-mail: info@namu.kiev.ua
+              <a
+                class="address__contact"
+                href="mailto:info@namu.kiev.ua"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
             </p>
           </div>
 
           <div class="footer__up-page">
-            <input
-              href="#"
-              type="button"
-              value="↑"
+            <a
+              href="#header"
               class="footer__up-page-arrow"
-            />
+            >
+              ↑
+            </a>
           </div>
 
           <div class="footer__top-underline"></div>
@@ -592,7 +620,7 @@
             <ul class="nav__list nav__list--right">
               <li class="nav__item">
                 <a
-                  href="№subscription"
+                  href="#subscription"
                   class="nav__link"
                 >
                   Про Нас
