--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!--#region head-->
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,14 +7,47 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
     <script src="scripts/main.js"></script>
+    <link
+      rel="icon"
+      href="images/Logo.png"
+    />
+    <title>NA MU</title>
+  </head>
+  <!--#endregion-->
+  <body class="page">
+    <!--#region header-->
+    <header class="header">
+      <img
+        src="images/phone-bg-header.png"
+        alt="bg-header"
+        class="header__bg"
+      />
+      <div class="top-bar">
+        <a
+          href="#menu"
+          class="top-bar__icon"
+        >
+          <img
+            src="images/icon/icon-burder-menu.png"
+            alt="menu"
+          />
+        </a>
+        <p class="top-bar__logo">
+          NA
+          <br />
+          MU
+        </p>
+      </div>
+      <div class="header__bottom">
+        <h1 class="header__bottom__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+      </div>
+    </header>
+
+    <!--#endregion-->
   </body>
 </html>
