--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Museum</title>
+    <link rel="icon" href="./images/icons/favicon.svg">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
@@ -321,19 +322,23 @@
                 Бути в курсі всіх актуальних подій та останніх новин.
               </p>
             </div>
-            <div class="subscribe__button">
+            <form class="subscribe__form">
               <input
                 type="email"
                 class="button subscribe__input"
                 placeholder="E-mail"
+                required
               />
-              <div class="subscribe__arrow button__arrow">
+              <button
+                type="submit"
+                class="subscribe__arrow button__arrow"
+              >
                 <img
                   src="./images/icons/icon--arrow.svg"
                   alt="arrow"
                 />
-              </div>
-            </div>
+              </button>
+            </form>
           </div>
         </div>
       </section>
@@ -355,16 +360,21 @@
           </a>
 
           <div class="footer__icons">
-            <img
-              src="./images/icons/icon--facebook.svg"
-              alt="icon-facebook"
-              class="icon"
-            />
-            <img
-              src="./images/icons/icon--insta.svg"
-              alt="icon-instagram"
-              class="icon"
-            />
+            <a href="https://www.facebook.com/?locale=uk_UA" target="_blank">
+              <img
+                src="./images/icons/icon--facebook.svg"
+                alt="icon-facebook"
+                class="icon"
+              />
+            </a>
+
+            <a href="https://www.instagram.com/" target="_blank">
+              <img
+                src="./images/icons/icon--insta.svg"
+                alt="icon-instagram"
+                class="icon"
+              />
+            </a>
           </div>
 
           <div class="diagram footer__diagram">
