--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Museum</title>
-    <link rel="icon" href="./images/icons/favicon.svg">
+    <link
+      rel="icon"
+      href="./images/icons/favicon.svg"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
@@ -30,8 +33,8 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </head>
-  <body class="page">
-    <header class="header page__header">
+  <body>
+    <header class="header">
       <div class="container">
         <div class="header__top">
           <a
@@ -98,13 +101,13 @@
             <div class="nav__block">
               <a
                 href="#gallery"
-                class="nav__link menu__link"
+                class="nav__link nav__link--white-bg menu__link"
               >
                 Галерея
               </a>
               <a
                 href="#actual"
-                class="nav__link menu__link"
+                class="nav__link nav__link--white-bg menu__link"
               >
                 Виставки та події
               </a>
@@ -112,13 +115,13 @@
             <div class="nav__block">
               <a
                 href="#footer"
-                class="nav__link menu__link"
+                class="nav__link nav__link--white-bg menu__link"
               >
                 Про нас
               </a>
               <a
                 href="#footer"
-                class="nav__link menu__link"
+                class="nav__link nav__link--white-bg menu__link"
               >
                 Контакти
               </a>
@@ -360,7 +363,10 @@
           </a>
 
           <div class="footer__icons">
-            <a href="https://www.facebook.com/?locale=uk_UA" target="_blank">
+            <a
+              href="https://www.facebook.com/?locale=uk_UA"
+              target="_blank"
+            >
               <img
                 src="./images/icons/icon--facebook.svg"
                 alt="icon-facebook"
@@ -368,7 +374,10 @@
               />
             </a>
 
-            <a href="https://www.instagram.com/" target="_blank">
+            <a
+              href="https://www.instagram.com/"
+              target="_blank"
+            >
               <img
                 src="./images/icons/icon--insta.svg"
                 alt="icon-instagram"
@@ -419,15 +428,35 @@
           <div class="footer__about-us">
             <p class="footer__contacts">Контакти:</p>
 
-            <p class="footer__info">
-              вул. М. Грушевського, 6; Київ, 01001
-              <br />
-              тел. +38 (044) 278-13-57
-              <br />
-              факс +38 (044) 278-74-54
-              <br />
-              e-mail: info@namu.kiev.ua
-            </p>
+            <div class="footer__links">
+              <a
+                href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.449395,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?hl=ru&entry=ttu&g_ep=EgoyMDI1MDIyNi4wIKXMDSoASAFQAw%3D%3D"
+                class="footer__info"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a
+                href="tel:+380442781357"
+                class="footer__info"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+
+              <a
+                href="tel:+380442787454"
+                class="footer__info"
+              >
+                факс +38 (044) 278-74-54
+              </a>
+              <a
+                href="https://mail.google.com"
+                class="footer__info"
+                target="_blank"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
           </div>
 
           <a
