start with menu

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,35 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Національний художній музей України</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/favicon.svg"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+    <header class="header">
+      <div class="container">
+        <div class="header__menu">menu</div>
+        <div class="header__content">
+          <div class="header__top">
+            <img
+              src="./images/muzej-mobile.png"
+              alt="Національний художній музей України"
+              class="header__image"
+            />
+          </div>
+          <div class="header__bottom">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <button class="header__button">квитки</button>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
